# -nckh

./: sqline_1.sll  sqline_1.spj  test.ino
SquareLine_Project/libraries/: lv_conf.h
SquareLine_Project/libraries/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_MainScreen.c  ui_Screen101.c  ui_Screen102.c  ui_Screen201.c  ui_comp.c  ui_comp.h  ui_comp_hook.c  ui_comp_hook.h  ui_comp_imgbutton1.c  ui_comp_imgbutton1.h  ui_img_back_png.c  ui_img_fire_border_resize_png.c  ui_img_smoke_border_resize_png.c
SquareLine_Project/ui/: ui.ino
esp_now/esp_send.ino/: esp_send.ino.ino
node_reviece/: node_reviece.ino
node_send/: node_send.ino
pictures/: SquareLine_Project.sll  SquareLine_Project.spj
pictures/components/: ImgButton1.ecomp
sqline_1/libraries/: lv_conf.h
sqline_1/libraries/ui/src/: CMakeLists.txt  RoomButton.h  filelist.txt  ui.c  ui.h  ui_Home.c  ui_Room.c  ui_comp_hook.c  ui_events.c  ui_events.h  ui_helpers.c  ui_helpers.h  ui_img_back_png.c  ui_img_fire_border_resize_png.c  ui_img_smoke_border_resize_png.c
sqline_1/ui/: ui.ino
